tests/baselines/reference/nodeModulesImportAssertions(module=node16).errors.txt
error TS2468: Cannot find global value 'Promise'.
index.ts(1,35): error TS1008: The 'assert' keyword in import attributes is deprecated and it has been replaced by the 'with' keyword.
index.ts(1,35): error TS2821: Import assertions are only supported when the '--module' option is set to 'esnext' or 'nodenext'.
otherc.cts(1,35): error TS1008: The 'assert' keyword in import attributes is deprecated and it has been replaced by the 'with' keyword.
otherc.cts(1,35): error TS2821: Import assertions are only supported when the '--module' option is set to 'esnext' or 'nodenext'.
otherc.cts(2,15): error TS2712: A dynamic import call in ES5/ES3 requires the 'Promise' constructor.  Make sure you have a declaration for the 'Promise' constructor or include 'ES2015' in your '--lib' option.


!!! error TS2468: Cannot find global value 'Promise'.
==== index.ts (2 errors) ====
    import json from "./package.json" assert { type: "json" };
                                      ~~~~~~
!!! error TS1008: The 'assert' keyword in import attributes is deprecated and it has been replaced by the 'with' keyword.
                                      ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2821: Import assertions are only supported when the '--module' option is set to 'esnext' or 'nodenext'.
==== otherc.cts (3 errors) ====
    import json from "./package.json" assert { type: "json" }; // should error, cjs mode imports don't support assertions
                                      ~~~~~~
!!! error TS1008: The 'assert' keyword in import attributes is deprecated and it has been replaced by the 'with' keyword.
                                      ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2821: Import assertions are only supported when the '--module' option is set to 'esnext' or 'nodenext'.
    const json2 = import("./package.json", { assert: { type: "json" } }); // should be fine
                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2712: A dynamic import call in ES5/ES3 requires the 'Promise' constructor.  Make sure you have a declaration for the 'Promise' constructor or include 'ES2015' in your '--lib' option.
==== package.json (0 errors) ====
    {
        "name": "pkg",
        "private": true,
        "type": "module"
    }